[project]
name = "img2pose-visualizer"
version = "0.1.0"
description = ""
authors = [
    {name = "Kevin Campos",email = "kesc23@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "grpcio (>=1.76.0,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "opencv-python (<=5.0.0)",
    "setproctitle (>=1.3.7,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
